<resources>
    <string name="app_name">SkyEngLogin</string>
    <string name="skyeng">Войдите под вашим аккаунтом в школе Skyeng и получите доступ к мобильному личному кабинету.</string>
    <string name="email">Электронная почта</string>
    <string name="get_code">Получить код для входа</string>
    <string name="login_password">Обычный вход с паролем</string>
    <string name="login_code">Войти без пароля</string>
    <string name="login_info">Сложный пароль или не хотите искать — войдите по коду. Или используйте обычный вход.</string>
    <string name="login_info_no_password">Сложный пароль или не хотите искать — используйте воход без пароля.</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="Code">Код</string>
    <string name="logout">Выйти</string>
    <string name="wrong_email">"Указанный номер не существует."</string>
    <string name="enter_code">Введите код (отправленный на телефон </string>
    <string name="resend_code">Выслать код повторно</string>
    <string name="waiting_resend_code">Выслать код повторно (%1$s)</string>
    <string name="email_malformed">Не верный формат имейл адреса</string>
    <string name="dialog_message_login">"Отправка кода \nПодождите"</string>
    <string name="dialog_message_code_login">"Выполняется вход \nПодождите"</string>
</resources>
