<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_text"
                style="@style/textStyleMain"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="15sp"
                android:layout_marginStart="15sp"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/skyeng" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_text"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="15sp"
                android:layout_marginStart="15sp"
                android:layout_marginTop="12dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_email"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="15sp"
                android:layout_marginStart="15sp"
                android:layout_marginTop="12dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:visibility="gone" />


            <Button
                android:id="@+id/button_get_code_or_login"
                style="@style/textStyleLoginOptions"
                android:layout_height="64dp"
                android:layout_below="@+id/login_password"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="15sp"
                android:layout_marginStart="15sp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_selector"
                android:enabled="false"
                android:text="@string/get_code" />

            <TextView
                android:id="@+id/login_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/default_login_or_code"
                android:layout_marginEnd="15sp"
                android:layout_marginStart="15sp"
                android:layout_marginTop="26dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/login_info"
                android:textAlignment="center"
                android:textColor="@color/colorLightGray"
                android:textSize="18sp"
                android:layout_marginBottom="50dp"/>

            <Button
                android:id="@+id/default_login_or_code"
                style="@style/textStyleLoginOptions"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button_get_code_or_login"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:minHeight="0dp"
                android:text="@string/login_password"
                android:textColor="@color/colorAccent"
                android:textSize="22sp" />


        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>
