<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/code_text"
            style="@style/textStyleMain"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/enter_code" />

        <EditText
            android:id="@+id/login_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/code_text"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="12dp"
            android:hint="@string/Code"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />


        <Button
            android:id="@+id/button_login"
            style="@style/textStyleLoginOptions"
            android:layout_height="64dp"
            android:layout_below="@+id/login_code"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_selector"
            android:enabled="false"
            android:text="@string/login" />

        <Button
            android:id="@+id/code_resend_button"
            style="@style/textStyleLoginOptions"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button_login"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:minHeight="0dp"
            android:text="@string/resend_code"
            android:textColor="@color/colorAccentLight"
            android:textSize="22sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.design.widget.CoordinatorLayout>
